h1 heading align fix in tab mode

--- a/style.css
+++ b/style.css
@@ -161,4 +161,7 @@ main {
     .footer-social-icon {
         text-align: center;
     }
+    .banner h1 {
+        text-align: left;
+    }
 }
